Update core-zero import client
